# PlumAi

./: .gitignore  AI-SERVICE-GUIA.md  ALPINE-GUIA.md  AUTO-UPDATE-GUIDE.md  CLAUDE.md  COMO-INICIAR-OLLAMA.md  ESTADO-ACTUAL.md  FIX-INSTRUCTIONS.md  GUIA-INTEGRACION.md  LUNR-ANALYSIS-FINDINGS.md  LUNR-VERIFICATION-REPORT.md  Migracion.md  OLLAMA-SETUP.md  OLLAMA-TROUBLESHOOTING.md  PLAN-MEJORAS.md  README.md  RELACIONES-BIDIRECCIONALES.md  RICHEDITOR-README.md  SESION-2025-11-09.md  START-OLLAMA.bat  START-OLLAMA.ps1  START-OLLAMA.sh  build.sh  demo-search-integrated.html  dev.sh  diagnostic.html  index.html  package-lock.json  package.json  plan-editor-novelas-ia.md  plumai.ps1  plumai.sh  proyecto-prueba.pluma  proyecto-prueba.pluma.backup  server.py  test-auto-update.js  test-lunr-indexing.html  test-ollama.html  test-stores.html  test-version-control-v2.html  (+4 more)
demo/: PLUMA_FILE_FORMAT.md  (+1 more)
js/: app.js
src-tauri/: Cargo.toml  README_VOSK.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs  providers.rs  speech.rs
src-tauri/src/ai/speech/: audio.rs  downloader.rs  engine_sherpa.rs  engine_vosk.rs  engine_whisper_api.rs  mod.rs  models.rs
src-tauri/src/commands/: mod.rs  packages.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/database/: mod.rs  models.rs  operations.rs  schema.rs
src-tauri/src/filesystem/: mod.rs
src-tauri/src/publishing/: docx.rs  mod.rs  pdf.rs
src-tauri/src/workspace/: backup.rs  config.rs  images.rs  migration.rs  mod.rs  project_fs.rs  sync.rs
(+243 files in other folders)
